<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_property"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn"
        android:text="@string/press_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_hello"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_object1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_object1"

        app:layout_constraintEnd_toStartOf="@id/label_object2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn" />


    <TextView
        android:id="@+id/label_object1_property1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_property_1"

        app:layout_constraintEnd_toStartOf="@id/label_object2_property1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_object1" />

    <TextView
        android:id="@+id/label_object1_property2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_property_2"

        app:layout_constraintEnd_toStartOf="@id/label_object2_property2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_object1_property1" />

    <TextView
        android:id="@+id/label_object2_property1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_property_1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_object1_property1"
        app:layout_constraintTop_toBottomOf="@id/label_object2" />

    <TextView
        android:id="@+id/label_object2_property2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_property_2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_object1_property2"
        app:layout_constraintTop_toBottomOf="@id/label_object2_property1" />

    <TextView
        android:id="@+id/label_object2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_object2"

        app:layout_constraintStart_toEndOf="@id/label_object1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn"/>







</androidx.constraintlayout.widget.ConstraintLayout>